tests/ui/invalid_union_specifier.stderr
error: unions are not supported as bitfield specifiers
 --> tests/ui/invalid_union_specifier.rs:4:1
  |
4 | pub union InvalidUnionSpecifier {
  | ^^^
